--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^15.4.0",
     "next": "10.0.4",
+    "next-urql": "^2.1.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-is": "^17.0.1",
+    "urql": "^1.11.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
